# OpenBangla-Keyboard

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLinux.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.adoc  README.bn.adoc  README.md  UPDATES.json  macOS.md  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: SonarCloud.yml  build.yml  ci.yml  deploy.yml
cmake/: CMakeCargo.cmake  CMakeLinux.txt  CMakeMacOS.txt  ManageDependency.cmake  ManageFile.cmake  ManageMessage.cmake  ManageString.cmake  ManageVariable.cmake  README  cmake_uninstall.cmake.in
data/: Avro_Easy.json  Borno.json  Bornona.json  Info-Engine.plist  Munir_Optima.json  Munir_Optima_uni_.json  National_Jatiya.json  Probhat.json  Readme.txt  autocorrect.json  avrophonetic.json  dictionary.json  io.github.openbangla.keyboard.metainfo.xml  openbangla-keyboard.desktop.in  openbangla.icns  openbangla.xml.in  regex.json  suffix.json
src/: CMakeLists.txt  log.h  main.cpp
src/engine/: CMakeLists.txt  Settings.cpp  Settings.h  SpecialFolders.h  main.cpp
src/engine/common/: CMakeLists.txt
src/engine/fcitx/: CMakeLists.txt  keycode.h  openbangla-addon.conf  openbangla.conf  openbangla.cpp  openbangla.h  shim.h
src/engine/ibus/: CMakeLists.txt  ibus_engine.cpp  ibus_keycode.h  keycode.h  main.cpp
src/engine/ibus-new/: CMakeLists.txt  main.c  main.cpp
src/engine/im/: im.h
src/engine/im/ibus/: CMakeLists.txt  ibus_engine.cpp  ibus_keycode.h
src/engine/layout/: BengaliChars.h  CMakeLists.txt  FixedLayoutParser.cpp  FixedLayoutParser.h  Layout.cpp  Layout.h  MethodFixedLayoutModern.cpp  MethodFixedLayoutModern.h  MethodPhonetic.cpp  MethodPhonetic.h  autocorrect.h  bengalichars.h  cachemanager.cpp  layout.cpp  methodphonetic.cpp  phoneticsuggestion.cpp
src/engine/libengine/: AutoCorrect.cpp  AutoCorrect.h  BengaliChars.h  CEngine.cpp  CEngine.h  CMakeLists.txt  Database.cpp  Database.h  FixedLayoutParser.cpp  FixedLayoutParser.h  Layout.cpp  Layout.h  MethodFixedLayoutModern.cpp  MethodFixedLayoutModern.h  MethodPhonetic.cpp  MethodPhonetic.h  PhoneticSuggestion.cpp  PhoneticSuggestion.h  PhoneticSuggestionV2.cpp  PhoneticSuggestionV2.h  Settings.cpp  Settings.h  autocorrect.cpp  cachemanager.cpp  cachemanager.h  database.cpp  keycode.h  module.modulemap  phoneticparser.cpp  phoneticparser.h  phoneticsuggestion.cpp  qlevenshtein.hpp  regexparser.cpp  regexparser.h
src/engine/libengine/c-api/: CEngine.h  keycode.h  module.modulemap
src/engine/macOS/: CMakeLists.txt  Keycodes.swift  OpenBanglaKeyboardController.swift  main.swift
src/engine/macOS/OpenBangla.xcodeproj/: project.pbxproj
src/engine/macOS/Resources/: Info.plist  MainMenu.xib  openbangla.entitlements
src/engine/macOS/Resources/Assets.xcassets/MenuIcon.imageset/: Contents.json
src/engine/macOS/Resources/Base.lproj/: InfoPlist.strings
src/engine/macOS/Sources/: AppDelegate.swift  Keycodes.swift  OpenBangla-Bridging-Header.h  OpenBanglaIMKInputController.swift  RitiWrapper.swift  Settings.swift  SupportDirectory.swift
src/engine/windows/: CMakeLists.txt  Cargo.toml  build.rs  main.cpp  win_keycode.h
src/engine/windows/src/: factory.rs  lib.rs  registry.rs  resource.rc
src/frontend/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AboutFile.cpp  AboutFile.h  AboutFile.ui  AutoCorrectDialog.cpp  AutoCorrectDialog.h  AutoCorrectDialog.ui  AvroPhonetic.cpp  AvroPhonetic.h  CMakeLists.txt  Layout.cpp  Layout.h  LayoutConverter.cpp  LayoutConverter.h  LayoutViewer.cpp  LayoutViewer.h  LayoutViewer.ui  OpenBanglaKeyboardFrontendUI.pro  PlatformConfig.cpp  PlatformConfig.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SingleInstance.cpp  SingleInstance.h  TopBar.cpp  TopBar.h  TopBar.ui  app.rc  images.qrc  main.cpp  topbar.cpp  topbar.ui
src/frontend/images/white/: ut.html
src/im/: CMakeLists.txt  im.h  keycode.h
src/im/ibus/: CMakeLists.txt  ibus_engine.cpp  ibus_keycode.h
src/im/windows/: win_keycode.h
src/layout/: CMakeLists.txt  autocorrect.cpp  autocorrect.h  bengalichars.h  cachemanager.cpp  cachemanager.h  database.cpp  database.h  layout.cpp  layout.h  methodphonetic.cpp  methodphonetic.h  phoneticparser.cpp  phoneticparser.h  phoneticsuggestion.cpp  phoneticsuggestion.h  qlevenshtein.hpp  regexparser.cpp  regexparser.h
src/shared/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Log.h  Settings.cpp  Settings.h
tools/: LICENSE  PKGBUILD.stub  README.md  build.sh  install.sh  make-debian.sh  make-fedora.sh  make-pkgs.sh  publish.sh  vendored-tarball.sh
tools/.github/workflows/: build.yml
tools/make-pkgs/: .gitignore  function.bash  make-build.sh  make-debian.sh  make-fedora-tweaks.sh  make-fedora.sh  make-pkgs.sh  readme.md
