[package]
name = "windows"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winreg = "0.10"

[dependencies.windows]
version = "0.37"
features = [
    "alloc",
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_TextServices",
]

[build-dependencies]
embed-resource = "1.7"
